@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.85 2005/11/15 19:57:59 minskim Exp $
+# $NetBSD: Makefile,v 1.86 2005/11/29 22:39:48 minskim Exp $
 #
 
 COMMENT=	Fonts
@@ -97,6 +97,7 @@ SUBDIR+=	t1lib
 SUBDIR+=	t1utils
 SUBDIR+=	tex-uhc-fonts-base
 SUBDIR+=	tex-uhc-fonts-extra
+SUBDIR+=	tex-unttf
 SUBDIR+=	ttf2pk
 SUBDIR+=	ttf2pt1
 SUBDIR+=	ttftot42
